--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,21 @@
 	<description>API for calling Norwegian grocery stores</description>
 	<properties>
 		<java.version>17</java.version>
-		<kotlin.version>1.7.22</kotlin.version>
+		<kotlin.version>1.8.10</kotlin.version>
+		<kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
+		<fuel.version>2.3.0</fuel.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://www.jitpack.io</url>
+		</repository>
+	</repositories>
 	<dependencies>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -39,8 +47,29 @@
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
+			<groupId>com.github.kittinunf.fuel</groupId>
+			<artifactId>fuel</artifactId>
+			<version>${fuel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.kittinunf.fuel</groupId>
+			<artifactId>fuel-gson</artifactId>
+			<version>${fuel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.kittinunf.fuel</groupId>
+			<artifactId>fuel-rxjava</artifactId>
+			<version>${fuel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.kittinunf.fuel</groupId>
+			<artifactId>fuel-coroutines</artifactId>
+			<version>${fuel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
 		</dependency>
 
 		<dependency>
@@ -49,11 +78,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -64,11 +93,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 
 	<build>
@@ -85,6 +114,7 @@
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
+						<arg>-jvm-target=17</arg>
 					</args>
 					<compilerPlugins>
 						<plugin>spring</plugin>
